Fixing issue #36 - Contact button on home page hover hard to read

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -205,6 +205,7 @@ label {
   &:hover {
     text-decoration: none;
     background-color: #65a0ff;
+    color: #fff;
   }
 }
 
